--- a/Views/TeachingAssistant/Registered.cshtml
+++ b/Views/TeachingAssistant/Registered.cshtml
@@ -52,7 +52,7 @@
                 <div class="card-header border-bottom-1 pt-3">
                     <div class="row">
                         <div class="mb-3 col-md-3 col-12 ">
-                            <label class="form-label">Đợt đăng ký</label>
+                            <label class="form-label">Học kỳ</label>
                             <select id="hocky" class="form-select" data-width="100%">
                                 @foreach (var item in lstHk)
                                 {
