Update function meeting minutes 14/10/2024

--- a/Views/ClassSection/Index.cshtml
+++ b/Views/ClassSection/Index.cshtml
@@ -180,7 +180,7 @@
                         <span class="text-danger" id="valid-camket"></span>
                     </div>
                     <button id="btnDeXuatClose" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
-                    <button disabled id="btnDeXuatSubmit" type="button" class="btn btn-primary">Lưu thông tin</button>
+                    <button id="btnDeXuatSubmit" type="button" class="btn btn-primary">Lưu thông tin</button>
                 </div>
             </div>
         </div>
