--- a/Views/TeachingAssistant/_TaskDetailGV.cshtml
+++ b/Views/TeachingAssistant/_TaskDetailGV.cshtml
@@ -116,8 +116,8 @@
         </div>
         <div class="col-12">
             <div class="mb-3">
-                <label class="form-label" for="hoten">Đặt câu hỏi hoặc thêm ghi chú công việc</label>
-                <textarea maxlength="300" placeholder="Nhập tối đa 300 ký tự" rows="4" class="form-control text-dark">@Model.GhiChu</textarea>
+                <label class="form-label" for="hoten">Ghi chú</label>
+                <textarea maxlength="300" placeholder="Nhập tối đa 300 ký tự" rows="4" class="form-control text-dark" autofocus>@Model.GhiChu</textarea>
             </div>
         </div>
     </div>
