--- a/Views/TeachingAssistant/_OpenApply.cshtml
+++ b/Views/TeachingAssistant/_OpenApply.cshtml
@@ -56,7 +56,7 @@
             <div class="col-md-6">
                 <div class="mb-3">
                     <label class="form-label" for="dienthoai">Số điện thoại <span class="text-danger">*</span></label>
-                    <input value="@tksv.SDT" maxlength="10" data-type="numbers" type="tel" id="dienthoai" class="form-control" placeholder="09xxxxxxxx">
+                    <input value="@tksv.SDT" maxlength="10" data-type="numbers" type="tel" id="dienthoai" class="form-control" placeholder="09xxxxxxxx" autofocus>
                     <span class="text-danger" id="valid-dienthoai"></span>
                 </div>
             </div>
