--- a/Views/Shared/_StudentLayout.cshtml
+++ b/Views/Shared/_StudentLayout.cshtml
@@ -409,6 +409,16 @@
             }
         });
     </script>
+    <script>
+        $(document).ready(function () {
+            $(document).on("ajaxStart", function () {
+                $('body').find('[id="load-fill-page"]').prop('hidden', false);
+            });
+            $(document).on("ajaxStop", function () {
+                $('body').find('[id="load-fill-page"]').prop('hidden', true);
+            });
+        })
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.js"></script>
 </body>
 </html>
