--- a/Views/ClassSection/Index.cshtml
+++ b/Views/ClassSection/Index.cshtml
@@ -59,7 +59,7 @@
         <!-- basic table -->
         <div class="col-md-12 col-12 mb-5">
             <div class="card">
-                <div class="card-header border-bottom-0 pb-0">
+                <div class="card-header border-bottom-1 pt-3">
                     <div class="row">
                         <div class="mb-3 col-md-4 col-12">
                             <label class="form-label">Học kỳ</label>
@@ -81,7 +81,7 @@
                     </div>
                 </div>
                 <!-- table  -->
-                <div class="card-body">
+                <div class="card-body mt-3" id="filterLoad">
                     <div class="table-card">
                         <table id="dataTableBasic" class="table table-hover" style="width:100%">
                             <thead class="table-light">
@@ -333,6 +333,8 @@
 <script src="~/Validation/teacher/classsection/DeXuatLHP.js"></script>
 <script src="~/Validation/teacher/classsection/viewTaskList.js"></script>
 <script src="~/Validation/teacher/classsection/updatetask.js"></script>
+<script src="~/Validation/teacher/classsection/filter.js"></script>
+
 <script>
     $(document).ready(function () {
         $("#diemDanhTable").DataTable({
