--- a/Views/ClassSection/Index.cshtml
+++ b/Views/ClassSection/Index.cshtml
@@ -162,7 +162,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="dexuattrogiangTitle"></h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                    <button type="button" class="btn-close" id="btnDeXuatClose2">
                         <span aria-hidden="true"></span>
                     </button>
                 </div>
@@ -179,7 +179,7 @@
                         </div>
                         <span class="text-danger" id="valid-camket"></span>
                     </div>
-                    <button id="btnDeXuatClose" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+                    <button id="btnDeXuatClose" type="button" class="btn btn-secondary">Đóng</button>
                     <button id="btnDeXuatSubmit" type="button" class="btn btn-primary">Lưu thông tin</button>
                 </div>
             </div>
@@ -192,7 +192,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="viewtasklistmodalTitle"></h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                    <button type="button" id="btnviewtasklistmodalClose2" class="btn-close">
                         <span aria-hidden="true"></span>
                     </button>
                 </div>
