--- a/Views/ClassSection/_TaskListViewEdit.cshtml
+++ b/Views/ClassSection/_TaskListViewEdit.cshtml
@@ -12,6 +12,7 @@
                 <table class="table table-hover" data-width="100%">
                     <thead class="table-light">
                         <tr>
+                            <input hidden value="false" id="viewchixem" />
                             <input hidden value="@Model.First().ID_LopHocPhan" id="edit-idLHP" />
                             <th class="ps-3 text-nowrap">Mô tả công việc</th>
                             <th style="max-width: 120px;" class="ps-3 text-nowrap">Giờ quy đổi</th>
