--- a/Views/ClassSection/_TaskListOnlyView.cshtml
+++ b/Views/ClassSection/_TaskListOnlyView.cshtml
@@ -9,7 +9,8 @@
                 <table class="table table-hover" data-width="100%">
                     <thead class="table-light">
                         <tr>
-                            <input hidden value="" id="dexuatLHPID" />
+                            <input hidden value="true" id="viewchixem" />
+                            <input hidden value="" viewchixem="true" id="dexuatLHPID" />
                             <th class="ps-3 text-nowrap">Mô tả công việc</th>
                             <th style="max-width: 120px;" class="ps-3 text-nowrap">Giờ quy đổi</th>
                             <th class="ps-3 text-nowrap">Thời hạn hoàn thành</th>
