add function cancel apply

--- a/Views/TeachingAssistant/Apply.cshtml
+++ b/Views/TeachingAssistant/Apply.cshtml
@@ -58,7 +58,7 @@
             </div>
             <div class="modal-footer">
                 <button id="btnClose" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
-                <button hidden id="huydangky" type="button" class="btn btn-danger">Hủy đăng ký</button>
+                <button hidden id="btnHuydangky" type="button" class="btn btn-danger">Hủy đăng ký</button>
                 <button id="btnSubmit" type="button" class="btn btn-primary">Lưu thông tin</button>
                 <button id="btnEditSubmit" type="button" class="btn btn-primary">Lưu thông tin</button>
             </div>
@@ -89,3 +89,4 @@
 <script src="~/Validation/SVandTA/filterviewapply.js"></script>
 <script src="~/Validation/SVandTA/openapply.js"></script>
 <script src="~/Validation/SVandTA/submitapply.js"></script>
+<script src="~/Validation/SVandTA/cancelapply.js"></script>
