--- a/Views/ClassSection/Index.cshtml
+++ b/Views/ClassSection/Index.cshtml
@@ -200,7 +200,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button id="btnviewtasklistmodalClose" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+                    <button id="btnviewtasklistmodalClose" type="button" class="btn btn-secondary">Đóng</button>
                     <button hidden id="btnviewtasklistmodalSubmit" type="button" class="btn btn-primary">Lưu thông tin</button>
 
                 </div>
